#6447 - Blog: fix some layout bugs

--- a/public/less/ssb-site-builder/ssb-blog-editor.less
+++ b/public/less/ssb-site-builder/ssb-blog-editor.less
@@ -71,7 +71,7 @@ ssb-blog-editor {
     }
 
     .blog-post-image{
-        height: 200px;
+        // height: 200px;
         width: 200px;
     }
 
